auto load rss db and config

--- a/config.conf
+++ b/config.conf
@@ -6,5 +6,6 @@
     "rss_url_db": "rss_url_db.json",
     "trawler_sleep_time": 10,
     "loggingLevel": "info",
-    "logFile": "log.txt"
+    "logFile": "log.txt",
+    "rss_lastModified": 0
 }
