remove mongo and json DB interface

--- a/config.conf
+++ b/config.conf
@@ -1,8 +1,8 @@
 
 {
-    "name_version": "news trawler, v1",
-    "mongoDB_hostConnectString": "DB_PORT_27017_TCP_ADDR",
-    "mongoDB_port": 27017,
+    "name_version": "news trawler, v1.sap",
+    "postgres_dbname": "magoo",
+    "postgres_user_name": "magoo",
     "rss_url_db": "rss_url_db.json",
     "trawler_sleep_time": 10,
     "loggingLevel": "info",
