--- a/extMongo.conf
+++ b/extMongo.conf
@@ -1,7 +1,7 @@
 
 {
     "name_version": "news trawler, v1",
-    "mongoDB_hostConnectString": "mongodb://docker.for.mac.localhost:27017/notes",
+    "mongoDB_hostConnectString": "DB_PORT_27017_TCP_ADDR",
     "mongoDB_port": 27017,
     "rss_url_db": "rss_url_db.json",
     "trawler_sleep_time": 10,
